crates/cribo/tests/snapshots/bundled_code@importlib_static_renaming.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/importlib_static_renaming/main.py
---
#!/usr/bin/env python3
# Generated by Cribo - Python Source Bundler
# https://github.com/ophidiarium/cribo

import sys as _sys
import importlib as _importlib
class _CriboModule():

    def __init__(_cribo_self, m, p):
        _cribo_self._m, _cribo_self._p = m, p

    def __getattr__(_cribo_self, n, *, _getattr=getattr):
        f = _cribo_self._p + '.' + n
        try:
            return _CriboModule(_importlib.import_module(f), f)
        except ImportError:
            return _getattr(_cribo_self._m, n)

    def __getattribute__(_cribo_self, n, *, _getattr=getattr, _object=object):
        return _object.__getattribute__(_cribo_self, n) if n in ('_m', '_p', '__getattr__', '__class__', '__dict__', '__dir__', '__module__', '__qualname__') else _getattr(_object.__getattribute__(_cribo_self, '_m'), n)
class _Cribo():

    def __getattr__(_cribo_self, n):
        m = _sys.modules.get(n) or _importlib.import_module(n)
        return _CriboModule(m, n)
_cribo = _Cribo()
class _CriboPreservedLoader:
    _pristine = {}

    def __init__(self, entry, namespace=None, reload_target=None):
        self._entry = entry
        self._namespace = namespace
        self._reload_target = reload_target

    def create_module(self, spec, *, _getattr=getattr, _globals=globals, _id=id, _setattr=setattr, _type=type, _SimpleNamespace=_cribo.types.SimpleNamespace):
        module = None
        if self._namespace is not None:
            module = self._namespace
        elif self._entry[1] is not None:
            module = _globals()[self._entry[1]]
        if module is not None:
            if _getattr(module, '_cribo_machinery_loaded', False):
                saved = _type(self)._pristine.get(_id(module))
                fresh = _SimpleNamespace()
                fresh.__dict__.update(saved if saved is not None else {'__name__': spec.name})
                return fresh
            return module
        module = _SimpleNamespace(__name__=spec.name)
        for export, binding in self._entry[3].items():
            _setattr(module, export, _globals()[binding])
        return module

    def exec_module(self, module, *, _BaseException=BaseException, _dict=dict, _globals=globals, _id=id, _type=type):
        init = self._entry[0]
        pristine = _type(self)._pristine
        key = _id(module)
        if init is None:
            if key not in pristine:
                pristine[key] = _dict(module.__dict__)
            module._cribo_machinery_loaded = True
            return
        is_reload = self._reload_target is module
        if is_reload:
            module.__initialized__ = False
            module.__initializing__ = False
        state = _dict(module.__dict__)
        if key not in pristine:
            pristine[key] = _dict(state)
        try:
            _globals()[init](module)
            module._cribo_machinery_loaded = True
        except _BaseException:
            if is_reload:
                module.__initializing__ = False
            else:
                module.__dict__.clear()
                module.__dict__.update(state)
                module.__initializing__ = False
            raise
class _CriboPreservedFinder:

    def __init__(self):
        self._targets = {}
        self._namespaces = {}
        self._loader = _CriboPreservedLoader

    def register(self, name, init, namespace, is_package, exports=None):
        self._targets[name] = init, namespace, is_package, exports or {}

    def bind(self, name, namespace):
        self._namespaces[name] = namespace

    def find_spec(self, name, path=None, target=None):
        entry = self._targets.get(name)
        if entry is None:
            return None
        from importlib.machinery import ModuleSpec
        return ModuleSpec(name, self._loader(entry, self._namespaces.get(name), target), is_package=entry[2])
_cribo_finder = _CriboPreservedFinder()
_sys.meta_path.append(_cribo_finder)
_cribo_finder_local = _CriboPreservedFinder()
_cribo_finder_local._namespaces = _cribo_finder._namespaces
for _cribo_index, _cribo_meta_finder in enumerate(_sys.meta_path):
    if getattr(_cribo_meta_finder, '__name__', '') == 'PathFinder':
        _sys.meta_path.insert(_cribo_index, _cribo_finder_local)
        break
else:
    _sys.meta_path.insert(0, _cribo_finder_local)
_cribo_finder_local.register('foo', None, None, False, {'greet': 'greet', 'get_value': 'get_value'})
_cribo_finder_local.register('bar', None, None, False, {'process': 'process', 'Calculator': 'Calculator'})
foo = _cribo.types.SimpleNamespace(__name__='foo')
def greet(name):
    return f"Hello, {name}!"
greet.__module__ = 'foo'
def get_value():
    return 42
get_value.__module__ = 'foo'
MESSAGE = "This is foo module"
foo.MESSAGE = MESSAGE
foo.get_value = get_value
foo.greet = greet
bar = _cribo.types.SimpleNamespace(__name__='bar')
def process(data):
    return f"Processed: {data}"
process.__module__ = 'bar'
class Calculator:

    @(lambda _cribo_f, _cribo_setattr=setattr: (_cribo_setattr(_cribo_f, '__module__', 'bar'), _cribo_f)[1])
    def add(self, a, b):
        return a + b

    @(lambda _cribo_f, _cribo_setattr=setattr: (_cribo_setattr(_cribo_f, '__module__', 'bar'), _cribo_f)[1])
    def multiply(self, a, b):
        return a * b
Calculator.__module__ = 'bar'
VERSION = "1.0.0"
bar.Calculator = Calculator
bar.VERSION = VERSION
bar.process = process
il = _cribo.importlib
foo = _cribo.sys.modules['foo'] if 'foo' in _cribo.sys.modules else _cribo.types.SimpleNamespace(greet=greet, get_value=get_value, MESSAGE=MESSAGE)
bar_module = _cribo.sys.modules['bar'] if 'bar' in _cribo.sys.modules else _cribo.types.SimpleNamespace(process=process, Calculator=Calculator, VERSION=VERSION)
im = _cribo.importlib.import_module
also_foo = _cribo.sys.modules['foo'] if 'foo' in _cribo.sys.modules else _cribo.types.SimpleNamespace(greet=greet, get_value=get_value, MESSAGE=MESSAGE)
also_bar = _cribo.sys.modules['bar'] if 'bar' in _cribo.sys.modules else _cribo.types.SimpleNamespace(process=process, Calculator=Calculator, VERSION=VERSION)
print(f"foo.greet('World'): {greet('World')}")
print(f"foo.get_value(): {get_value()}")
print(f"foo.MESSAGE: {MESSAGE}")
print(f"\nbar_module.process('data'): {process('data')}")
print(f"bar_module.VERSION: {VERSION}")
calc = Calculator()
print(f"calc.add(5, 3): {calc.add(5, 3)}")
print(f"calc.multiply(4, 7): {calc.multiply(4, 7)}")
print(f"\nfoo has greet: {hasattr(foo, 'greet')}")
print(f"also_foo has greet: {hasattr(also_foo, 'greet')}")
print(f"bar_module has process: {hasattr(bar_module, 'process')}")
print(f"also_bar has process: {hasattr(also_bar, 'process')}")
print(f"\nalso_foo.greet('Python'): {greet('Python')}")
print(f"also_bar.process('test'): {process('test')}")
print("\nAll importlib renaming patterns work correctly!")
