crates/cribo/tests/snapshots/bundled_code@importlib_unbound_local_import.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/importlib_unbound_local_import/main.py
---
#!/usr/bin/env python3
# Generated by Cribo - Python Source Bundler
# https://github.com/ophidiarium/cribo

"""A later function-local import makes earlier uses unbound, exactly like Python.\n\n`import json as importlib` at the end of the function makes `importlib` local\nfor the WHOLE body, so the earlier call raises UnboundLocalError; bundling must\nneither rewrite the call nor bundle its target.\n"""
import sys as _sys
import importlib as _importlib
class _CriboModule():

    def __init__(_cribo_self, m, p):
        _cribo_self._m, _cribo_self._p = m, p

    def __getattr__(_cribo_self, n):
        f = _cribo_self._p + '.' + n
        try:
            return _CriboModule(_importlib.import_module(f), f)
        except ImportError:
            return getattr(_cribo_self._m, n)

    def __getattribute__(_cribo_self, n):
        return object.__getattribute__(_cribo_self, n) if n in ('_m', '_p', '__getattr__', '__class__', '__dict__', '__dir__', '__module__', '__qualname__') else getattr(object.__getattribute__(_cribo_self, '_m'), n)
class _Cribo():

    def __getattr__(_cribo_self, n):
        m = _sys.modules.get(n) or _importlib.import_module(n)
        return _CriboModule(m, n)
_cribo = _Cribo()
importlib = _cribo.importlib
def broken():
    result = importlib.import_module("untouched_helper")
    importlib = _cribo.json
    return result, _cribo.json
try:
    broken()
except UnboundLocalError:
    print("UnboundLocalError preserved")
