crates/cribo/tests/snapshots/bundled_code@init_reexports.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/init_reexports/main.py
---
#!/usr/bin/env python3
# Generated by Cribo - Python Source Bundler
# https://github.com/ophidiarium/cribo

import sys as _sys
import importlib as _importlib
class _CriboModule():

    def __init__(self, m, p):
        self._m, self._p = m, p

    def __getattr__(self, n):
        f = self._p + '.' + n
        try:
            return _CriboModule(_importlib.import_module(f), f)
        except ImportError:
            return getattr(self._m, n)

    def __getattribute__(self, n):
        return object.__getattribute__(self, n) if n in ('_m', '_p', '__getattr__', '__class__', '__dict__', '__dir__', '__module__', '__qualname__') else getattr(object.__getattribute__(self, '_m'), n)
class _Cribo():

    def __getattr__(self, n):
        m = _sys.modules.get(n) or _importlib.import_module(n)
        return _CriboModule(m, n)
_cribo = _Cribo()
class _CriboPreservedLoader:

    def __init__(self, entry, namespace=None):
        self._entry = entry
        self._namespace = namespace

    def create_module(self, spec):
        if self._namespace is not None:
            return self._namespace
        if self._entry[1] is not None:
            return globals()[self._entry[1]]
        module = _cribo.types.SimpleNamespace(__name__=spec.name)
        for export, binding in self._entry[3].items():
            setattr(module, export, globals()[binding])
        return module

    def exec_module(self, module):
        init = self._entry[0]
        if init is None:
            return
        if getattr(module, '_cribo_machinery_loaded', False):
            module.__initialized__ = False
            module.__initializing__ = False
        state = dict(module.__dict__)
        try:
            globals()[init](module)
            module._cribo_machinery_loaded = True
        except BaseException:
            module.__dict__.clear()
            module.__dict__.update(state)
            module.__initializing__ = False
            raise
class _CriboPreservedFinder:

    def __init__(self):
        self._targets = {}
        self._namespaces = {}
        self._loader = _CriboPreservedLoader

    def register(self, name, init, namespace, is_package, exports=None):
        self._targets[name] = init, namespace, is_package, exports or {}

    def bind(self, name, namespace):
        self._namespaces[name] = namespace

    def find_spec(self, name, path=None, target=None):
        entry = self._targets.get(name)
        if entry is None:
            return None
        from importlib.machinery import ModuleSpec
        return ModuleSpec(name, self._loader(entry, self._namespaces.get(name)), is_package=entry[2])
_cribo_finder = _CriboPreservedFinder()
_sys.meta_path.append(_cribo_finder)
_cribo_finder.register('mypackage.utils', '_cribo_init___cribo_99e487_mypackage_utils', 'mypackage_utils', True)
_cribo_finder.register('mypackage.config', '_cribo_init___cribo_de6c46_mypackage_config', 'mypackage_config', False)
_cribo_finder.register('mypackage', '_cribo_init___cribo_a81151_mypackage', 'mypackage', True)
_cribo_finder.register('mypackage.data_processor', None, None, False, {'process_data': 'process_data'})
_cribo_finder.register('mypackage.formatter', None, None, False, {'format_data': 'format_data'})
_cribo_finder.register('mypackage.utils.helper', None, None, False, {'helper_function': 'helper_function'})
mypackage_data_processor = _cribo.types.SimpleNamespace(__name__='mypackage.data_processor', __doc__='Data processing module.')
mypackage = _cribo.types.SimpleNamespace(__name__='mypackage', __initializing__=False, __initialized__=False, __path__=[])
mypackage.data_processor = mypackage_data_processor
"""Data processing module."""
def process_data(data):
    """Process the input data."""
    processed = data.copy()
    processed["processed"] = True
    return processed
process_data.__module__ = 'mypackage.data_processor'
mypackage_data_processor.process_data = process_data
mypackage_formatter = _cribo.types.SimpleNamespace(__name__='mypackage.formatter', __doc__='Data formatting module.')
mypackage.formatter = mypackage_formatter
"""Data formatting module."""
def format_data(data):
    """Format the processed data."""
    return f"Formatted: {data}"
format_data.__module__ = 'mypackage.formatter'
mypackage_formatter.format_data = format_data
mypackage_config = _cribo.types.SimpleNamespace(__name__='mypackage.config', __initializing__=False, __initialized__=False)
_cribo_finder.bind('mypackage.config', mypackage_config)
def _cribo_init___cribo_de6c46_mypackage_config(self):
    if getattr(self, '__initialized__', False):
        return self
    if getattr(self, '__initializing__', False):
        return self
    self.__initializing__ = True
    self.__package__ = 'mypackage'
    self.__doc__ = 'Configuration module.'
    """Configuration module."""
    os = _cribo.os
    self.os = os
    self.os = os

    class Config:
        """Configuration class."""

        def __init__(self):
            self.DEBUG = _cribo.os.environ.get("DEBUG", "false").lower() == "true"
            self.LOG_LEVEL = _cribo.os.environ.get("LOG_LEVEL", "INFO")
    Config.__module__ = 'mypackage.config'
    Config.__qualname__ = 'Config'
    self.Config = Config
    config = Config()
    self.config = config
    self.__initialized__ = True
    self.__initializing__ = False
    return self
mypackage_config.__init__ = _cribo_init___cribo_de6c46_mypackage_config
mypackage.config = mypackage_config
mypackage_utils_helper = _cribo.types.SimpleNamespace(__name__='mypackage.utils.helper', __doc__='Helper utilities.')
mypackage_utils = _cribo.types.SimpleNamespace(__name__='mypackage.utils', __initializing__=False, __initialized__=False, __path__=[])
mypackage.utils = mypackage_utils
mypackage_utils.helper = mypackage_utils_helper
"""Helper utilities."""
def helper_function(data):
    """Helper function for processing data."""
    return f"Helped: {data}"
helper_function.__module__ = 'mypackage.utils.helper'
mypackage_utils_helper.helper_function = helper_function
mypackage_utils_constants = _cribo.types.SimpleNamespace(__name__='mypackage.utils.constants', __doc__='Constants module.')
mypackage_utils.constants = mypackage_utils_constants
"""Constants module."""
MAX_ITEMS = 100
DEFAULT_VALUE = "default"
mypackage_utils_constants.MAX_ITEMS = MAX_ITEMS
mypackage_utils_constants.DEFAULT_VALUE = DEFAULT_VALUE
def _cribo_init___cribo_a81151_mypackage(self):
    if getattr(self, '__initialized__', False):
        return self
    if getattr(self, '__initializing__', False):
        return self
    self.__initializing__ = True
    self.__package__ = 'mypackage'
    self.__doc__ = "\nPackage initialization with re-exports.\n\nThis __init__.py demonstrates the pattern where imports are made but not directly used\nwithin this file - they are re-exports for the package interface.\nThese imports should NOT be stripped as unused, even though they don't appear\nto be used within this file itself.\n"
    global mypackage_config
    """\nPackage initialization with re-exports.\n\nThis __init__.py demonstrates the pattern where imports are made but not directly used\nwithin this file - they are re-exports for the package interface.\nThese imports should NOT be stripped as unused, even though they don't appear\nto be used within this file itself.\n"""
    process_data = mypackage_data_processor.process_data
    mypackage.process_data = process_data
    format_data = mypackage_formatter.format_data
    mypackage.format_data = format_data
    mypackage_config = _cribo_init___cribo_de6c46_mypackage_config(mypackage_config)
    config = mypackage_config.config
    self.config = config
    self.config = config
    __cribo_init_result = _cribo_init___cribo_99e487_mypackage_utils(mypackage_utils)
    for attr in dir(__cribo_init_result):
        if not attr.startswith('_'):
            setattr(mypackage.utils, attr, getattr(__cribo_init_result, attr))
    self.helper_function = helper_function
    __version__ = "1.0.0"
    self.__version__ = __version__
    DEBUG_MODE = config.DEBUG
    self.DEBUG_MODE = DEBUG_MODE
    self.formatter = mypackage_formatter
    self.data_processor = mypackage_data_processor
    self.process_data = process_data
    self.format_data = format_data
    self.__initialized__ = True
    self.__initializing__ = False
    return self
mypackage.__init__ = _cribo_init___cribo_a81151_mypackage
def _cribo_init___cribo_99e487_mypackage_utils(self):
    if getattr(self, '__initialized__', False):
        return self
    if getattr(self, '__initializing__', False):
        return self
    self.__initializing__ = True
    self.__package__ = 'mypackage.utils'
    self.__doc__ = 'Utils subpackage with re-exports.'
    """Utils subpackage with re-exports."""
    helper_function = mypackage_utils_helper.helper_function
    mypackage_utils.helper_function = helper_function
    MAX_ITEMS = mypackage_utils_constants.MAX_ITEMS
    mypackage_utils.MAX_ITEMS = MAX_ITEMS
    DEFAULT_VALUE = mypackage_utils_constants.DEFAULT_VALUE
    mypackage_utils.DEFAULT_VALUE = DEFAULT_VALUE
    self.constants = mypackage_utils_constants
    self.helper = mypackage_utils_helper
    self.helper_function = helper_function
    self.__initialized__ = True
    self.__initializing__ = False
    return self
mypackage_utils.__init__ = _cribo_init___cribo_99e487_mypackage_utils
'''\nTest script demonstrating __init__.py re-export preservation.\n\nThis fixture tests that imports in __init__.py files are preserved even if they\nappear "unused" within that file, as they are typically re-exports for the package interface.\n'''
__cribo_init_result = _cribo_init___cribo_a81151_mypackage(mypackage)
for attr in dir(__cribo_init_result):
    if not attr.startswith('_'):
        setattr(mypackage, attr, getattr(__cribo_init_result, attr))
config = mypackage.config
__cribo_init_result = _cribo_init___cribo_a81151_mypackage(mypackage)
for attr in dir(__cribo_init_result):
    if not attr.startswith('_'):
        setattr(mypackage, attr, getattr(__cribo_init_result, attr))
__cribo_init_result = _cribo_init___cribo_99e487_mypackage_utils(mypackage_utils)
for attr in dir(__cribo_init_result):
    if not attr.startswith('_'):
        setattr(mypackage.utils, attr, getattr(__cribo_init_result, attr))
def main():
    """Main function demonstrating usage of re-exported functions."""
    data = {"name": "test", "value": 42}
    processed = process_data(data)
    formatted = format_data(processed)
    result = helper_function(formatted)
    if config.DEBUG:
        print(f"Debug: {result}")
    else:
        print(result)
if __name__ == "__main__":
    main()
utils = mypackage.utils
formatter = mypackage.formatter
data_processor = mypackage.data_processor
